unpackaged/main/default/objects/Sucursal__c/fields/Ciudad2__c.field-meta.xml
<CustomField>
    <fullName>Ciudad2__c</fullName>
    <label>Ciudad</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>