unpackaged/main/default/objects/Sucursal__c/fields/Division2__c.field-meta.xml
<CustomField>
    <fullName>Division2__c</fullName>
    <label>Division2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DF Centro</fullName>
            </value>
            <value>
                <fullName>Hombre Camion</fullName>
            </value>
            <value>
                <fullName>Monterrey</fullName>
            </value>
            <value>
                <fullName>Nomina</fullName>
            </value>
            <value>
                <fullName>Noreste</fullName>
            </value>
            <value>
                <fullName>Noroeste</fullName>
            </value>
            <value>
                <fullName>Occidente</fullName>
            </value>
            <value>
                <fullName>Patrimonial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>