unpackaged/main/default/objects/Sucursal__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aguascalientes</fullName>
            </value>
            <value>
                <fullName>Baja California Norte</fullName>
            </value>
            <value>
                <fullName>Baja California Sur</fullName>
            </value>
            <value>
                <fullName>Campeche</fullName>
            </value>
            <value>
                <fullName>Chiapas</fullName>
            </value>
            <value>
                <fullName>Chihuahua</fullName>
            </value>
            <value>
                <fullName>Ciudad de Mexico</fullName>
            </value>
            <value>
                <fullName>Coahuila</fullName>
            </value>
            <value>
                <fullName>Colima</fullName>
            </value>
            <value>
                <fullName>Durango</fullName>
            </value>
            <value>
                <fullName>Estado de Mexico</fullName>
            </value>
            <value>
                <fullName>Guanajuato</fullName>
            </value>
            <value>
                <fullName>Guerrero</fullName>
            </value>
            <value>
                <fullName>Hidalgo</fullName>
            </value>
            <value>
                <fullName>Jalisco</fullName>
            </value>
            <value>
                <fullName>Michoacan</fullName>
            </value>
            <value>
                <fullName>Morelos</fullName>
            </value>
            <value>
                <fullName>Nayarit</fullName>
            </value>
            <value>
                <fullName>Nuevo Leon</fullName>
            </value>
            <value>
                <fullName>Oaxaca</fullName>
            </value>
            <value>
                <fullName>Puebla</fullName>
            </value>
            <value>
                <fullName>Queretaro</fullName>
            </value>
            <value>
                <fullName>Quintana Roo</fullName>
            </value>
            <value>
                <fullName>San Luis Potosi</fullName>
            </value>
            <value>
                <fullName>Sinaloa</fullName>
            </value>
            <value>
                <fullName>Sonora</fullName>
            </value>
            <value>
                <fullName>Tabasco</fullName>
            </value>
            <value>
                <fullName>Tamaulipas</fullName>
            </value>
            <value>
                <fullName>Tlaxcala</fullName>
            </value>
            <value>
                <fullName>Veracruz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>