unpackaged/main/default/objects/Sucursal__c/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bajio</fullName>
            </value>
            <value>
                <fullName>Coahuila Norte</fullName>
            </value>
            <value>
                <fullName>Corredor Minero</fullName>
            </value>
            <value>
                <fullName>DF Centro</fullName>
            </value>
            <value>
                <fullName>DF Norte</fullName>
            </value>
            <value>
                <fullName>DF Sur</fullName>
            </value>
            <value>
                <fullName>Guadalajara</fullName>
            </value>
            <value>
                <fullName>Monterrey Centro</fullName>
            </value>
            <value>
                <fullName>Monterrey Norte</fullName>
            </value>
            <value>
                <fullName>Monterrey Sur</fullName>
            </value>
            <value>
                <fullName>Monterrey Valle</fullName>
            </value>
            <value>
                <fullName>Morelia</fullName>
            </value>
            <value>
                <fullName>Noroeste</fullName>
            </value>
            <value>
                <fullName>Patrimonial</fullName>
            </value>
            <value>
                <fullName>Queretaro</fullName>
            </value>
            <value>
                <fullName>Saltillo-Laguna</fullName>
            </value>
            <value>
                <fullName>Tamaulipas</fullName>
            </value>
            <value>
                <fullName>Tijuana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>