unpackaged/main/default/objects/Sucursal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>External_Id__c</columns>
    <columns>NAME</columns>
    <columns>Ciudad2__c</columns>
    <columns>Estado__c</columns>
    <columns>Division2__c</columns>
    <columns>AGENCIA__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>